# hdd-toolkit

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/hdd_firmware_toolkit/: __init__.py  __main__.py
src/hdd_firmware_toolkit/adapters/: __init__.py
src/hdd_firmware_toolkit/ata/: sat.py  wd_vsc.py
src/hdd_firmware_toolkit/cli/: __init__.py  handlers.py
src/hdd_firmware_toolkit/core/: __init__.py
src/hdd_firmware_toolkit/data/: __init__.py
src/hdd_firmware_toolkit/exploit/: bridge_attack.py  fw_update.py  hotpatch.py  service_area.py
src/hdd_firmware_toolkit/firmware/: detection.py  patcher.py  seagate.py  toshiba.py  wd.py
src/hdd_firmware_toolkit/hw/: data_recovery.py  hpa_dco.py  jtag.py  usb_bridge.py
src/hdd_firmware_toolkit/nvme/: admin.py  envme.py  sandisk.py  timing.py
src/hdd_firmware_toolkit/samsung_mex/: aes.py  dma.py  gpio.py  memory_map.py  ncq.py  safe_uart.py
src/hdd_firmware_toolkit/services/: __init__.py
src/hdd_toolkit/: __init__.py  __main__.py
src/hdd_toolkit/adapters/: __init__.py
src/hdd_toolkit/ata/: commands.py  hitachi_vsc.py  seagate_f3_terminal.py  seagate_vsc.py  security.py  tcg_opal.py  wd_vsc.py
src/hdd_toolkit/cli/: __init__.py  handlers.py
src/hdd_toolkit/core/: __init__.py  models.py  utils.py
src/hdd_toolkit/data/: __init__.py
src/hdd_toolkit/exploit/: ata_password_oracle.py  bridge_attack.py  data_exfiltration_backdoor.py  fw_update.py  hotpatch.py  psoc_coldboot.py  rtl9210_bridge.py  service_area.py  spare_sector_forensics.py  wd_passport.py  write_cache_fault.py  xbox360_firmware_spoof.py
src/hdd_toolkit/firmware/: detection.py  patcher.py  samsung.py  seagate.py  wd.py  write_hook.py
src/hdd_toolkit/hw/: data_recovery.py  gc_inference.py  (+6 more)
tests/: test_adapters_ata.py  test_adapters_jtag.py  test_adapters_seagate_vsc.py  test_adapters_usb.py  test_adapters_wd_vsc.py  test_ata_hitachi_vsc.py  test_ata_seagate_f3_terminal.py  test_ata_security.py  test_ata_tcg_opal.py  test_cli.py  test_core_models.py  test_core_models_waf.py  test_core_utils.py  test_exploit_ata_password_oracle.py  test_exploit_data_exfiltration_backdoor.py  test_exploit_psoc_coldboot.py  test_exploit_rtl9210_bridge.py  test_exploit_spare_sector_forensics.py  test_exploit_wd_passport.py  test_exploit_write_cache_fault.py  test_exploit_xbox360_firmware_spoof.py  test_firmware_write_hook.py  test_hw_gc_inference.py  test_hw_issp.py  test_hw_sas.py  test_hw_serial_console.py  test_hw_spi_flash.py  test_nvme_fdp.py  test_nvme_hmb.py  test_nvme_waf.py  test_nvme_zns.py  test_services_exploit.py  test_services_fwdetect.py  test_services_hpadco.py  test_services_nvme_extra.py  test_services_nvme_live.py  test_services_parsers.py  test_services_patcher.py  test_services_recovery.py  test_services_samsung.py  (+1 more)
(+14 files in other folders)
